tests/paczka1/fuzzy1/79138262.err
Error in line 5: 7zJUsWVc S941 65,2
Error in line 6: HhdK56eI6Zb S800 8,8
Error in line 3: ZbiZR5vU A550 79,7
Error in line 34: A550 S870 7,3
